--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+## autocompletion files
+kappak.cwl
+kappak.sublime-completions
+texmaker.txt
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
