Added the `allscript` for `categoryStyle`

--- a/src/kappak.json
+++ b/src/kappak.json
@@ -90,6 +90,7 @@
       "doc": "Sets the category style for category theory.",
       "vals": [
         "script",
+        "allscript",
         "bf",
         "rm",
         "sf",
